k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lynx2-backend
    app.kubernetes.io/instance: lynx2-backend
    app.kubernetes.io/name: lynx2-backend
  name: lynx2-backend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/instance: lynx2-backend
    app.kubernetes.io/name: lynx2-backend
  sessionAffinity: None
  type: ClusterIP
